--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@stripe/stripe-js": "^2.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.0-rc19",
     "lucide-react": "^0.295.0",
     "next": "14.0.4",
     "react": "^18",
